fixed form spacing and added textarea for message

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -11,5 +11,5 @@
 }
 
 .u-margin-bot-medibig {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
