--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -43,6 +43,7 @@
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
+        transition: all .3s;
 
         &::-webkit-input-placeholder {
             color: #999;
