--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   margin-bottom: 1.5rem; }
 
 .u-margin-bot-medibig {
-  margin-bottom: 4rem; }
+  margin-bottom: 2rem; }
 
 *,
 *::after,
@@ -303,7 +303,8 @@ body {
   border: none;
   border-bottom: 3px solid transparent;
   width: 90%;
-  display: block; }
+  display: block;
+  transition: all .3s; }
   .form__input::-webkit-input-placeholder {
     color: #999; }
   .form__input:focus {
